Should fix the copyright text align

--- a/web/stylus/common/siteFooter.styl
+++ b/web/stylus/common/siteFooter.styl
@@ -18,6 +18,7 @@
     line-height 24px
     color #333
     display inline-block
+    text-align left
     width 420px
 
   .footer-social-media
@@ -28,8 +29,6 @@
 
   .footer-copyright
     display inline-block
-    width 420px
-    margin-left 15px
     text-align center
 
   img
